# canteen-management-system-server

./: .env.example  .gitignore  README.md  compose.deploy.yaml  compose.yaml  compose.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yaml  deploy.yaml  tests.yaml
apps/authentication/: tests.py  views.py
apps/common/: logging_utils.py  middleware.py  redis_client.py  tests.py  throttling.py  utils.py  views.py
apps/common/fixtures/: items.json  menu_items.json  menus.json
apps/common/fixtures/fixtures/: categories.json  items.json  menu_items.json  menus.json
apps/common/fixtures/fixtures (new)/: 01_users.json  02_categories.json  03_items.json  06_orders.json  07_orderitems.json  08_balances.json  09_transactions.json
apps/common/fixtures/fixtures_mihaela/: test_categories.json  test_items.json  test_menuitems.json  test_menus.json
apps/menus/: models.py  tests.py
apps/orders/: tests.py
apps/users/: tests.py  views.py
apps/wallets/: tests.py
apps/webhooks/: tests.py  views.py
config/: settings.py  urls.py
deployment/: Dockerfile
deployment/caddy/: Caddyfile  Dockerfile
deployment/monitoring/: grafana-datasources.yml  loki-config.yaml  otel-collector-config.yaml
deployment/scripts/: entrypoint.sh  start-django-dev.sh  start-django-prod.sh
fixtures/: categories.json
fixtures/fixtures (new)/: 04_menus.json  05_menuitems.json
