[project]
name = ""
version = "1.0.0"
description = "RESTful API for managing users, meals, orders, and payments for canteens."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django~=5.2.9",
    "django-cors-headers~=4.8.0",
    "django-environ~=0.12.0",
    "django-filter~=25.1",
    "django-imagekit>=5.0.0",
    "django-sendgrid-v5>=1.3.1",
    "django-unfold>=0.65.0",
    "djangorestframework~=3.16.1",
    "djangorestframework-simplejwt[crypto]~=5.5.1",
    "drf-spectacular~=0.28.0",
    "gunicorn>=23.0.0",
    "msal>=1.31.0",
    "pillow>=11.3.0",
    "psycopg[binary]~=3.2.9",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "redis>=6.4.0",
    "ruff~=0.12.12",
    "sendgrid>=6.12.5",
    "stripe~=14.0.1",
]

[dependency-groups]
dev = [
    "pre-commit~=4.3.0",
]

[tool.ruff]
line-length = 120
indent-width = 4

extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "ASYNC", # flake8-async
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "BLE", # flake8-blind-except
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "FIX", # flake8 - fix me
    "N", # pep8-naming
    "UP", # pyupgrade
]
ignore = [
    "ISC001", # Disabled to avoid unexpected behaviour on `ruff format .`
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
